# simulation_team

./: CMakeLists.txt  README.md  model.config  package.xml
config/: components.yaml  start_locations.yaml  teleop.config  zed_modified.urdf.xacro
env-hooks/: env.sh.in
launch/: sim_world.launch.py  startsimulation.launch.py
models/Airlock/: model.config  model.sdf
models/Final/: model.config  model.sdf
models/Reactor/: model.config  model.sdf
models/hazard_barrel1/: model.config  model.sdf
models/hazard_barrel2/: model.config  model.sdf
models/hazard_barrel3/: model.config  model.sdf
models/landmarks/breakfast/: model.sdf
models/landmarks/fidget_spinner/: model.sdf
models/landmarks/fire_extinguisher/: model.sdf
models/landmarks/small_dry_bag/: model.config  model.sdf
models/landmarks/small_dry_bag/meshes/: smalldrybag.dae
models/mars_yard/: model.config  model.sdf
worlds/: challenge_1.sdf  challenge_2.sdf
