<?xml version="1.0"?>
<package format="3">
  <name>simulation_team</name>
  <version>0.1.0</version>
  <description>ERC 2024 marsyard</description>
  <maintainer email="arpitkumarsingh9470@gmail.com"> Github</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros_gz_sim</depend>


 <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
